kubernetes/portfoliodeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
  labels:
    app: portfolio
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
        - name: web
          image: ayush9099/portfolio:v1
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          imagePullPolicy: "Always"
