kubernetes/portfolioservices.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio-service
spec:
  selector:
    app: portfolio
  ports:
    - name: "portfolio"
      port: 80
